# snakemake-testing

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/snakemake_testing/: __init__.py  runner.py
tests/: test_runner.py
